header search is no longer visible on mobile on homepage and guidance and support pages

--- a/assets/sass/v2/shared/_header.scss
+++ b/assets/sass/v2/shared/_header.scss
@@ -83,7 +83,8 @@ header.page-header {
     }
 
     @include mobile-mq {
-      .content-homepage {
+      .content-homepage &,
+      .content-guidance-and-support & {
         display: none;
       }
 
